--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,10 @@
     "AllowedHosts": "*",
     "Jwt": {
         "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
-        "Issuer": "http://localhost:5249",
-        "Audience": "http://localhost:5249"
+        "Issuer": "http://localhost:5030",
+        "Audience": "http://localhost:5030"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=LTIN617242\\SQLEXPRESS;Initial Catalog=VehicleServiceBook;Integrated Security=True;Trust Server Certificate=True"
+        "DefaultConnection": "Server=LTIN617505\\SQLEXPRESS;Database=VehicleServiceBook;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
